# gridvibe

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GridVibe.bat  GridVibe.sh  LICENSE  Makefile  README.md  SECURITY.md  agent_registry.json  api.py  cleanup.py  default_config.json  gridvibe_version.py  main.py  pyproject.toml  requirements-desktop.txt  requirements-dev.txt  requirements-voice.txt  requirements.txt  session_manager.py  webview_launcher.py
.github/: PULL_REQUEST_TEMPLATE.md
START_HERE/: README.md  Start GridVibe.bat
docs/: deep_dive_review_2026-07-10.md  external_development_program_button_proposal.md  file_explorer_startup_mode.md  followups_implementation_plan_2026-07-18.md  git_integration_file_explorer_proposal.md  github_tags_and_releases.md  guardrail_audit_2026-07-22.md  implementation_stages_2026-07-16.md  launch_mode_selection_proposal.md  logging_guide.md  research_browser_mode.md  research_dynamic_terminal_resizing.md  research_file_explorer_refresh_flicker.md  research_file_text_editor_mode.md  research_session_tab_numbering.md  research_terminal_window_split.md  source_and_diff_view_proposal_2026-07-22.md  source_diff_analysis.md  terminal_surface_fit_proposal.md  terminals_js_split_plan_2026-07-23.md  testing_issues.md  text_editing_and_drag_drop_file_explorer_proposal.md  text_editor_2026-07-20.md  todos.txt  voice_guideline.md  workspace_restore_hardening_2026-07-20.md
services/: __init__.py  vosk_service.py
sessions/: __init__.py  manager.py
templates/: index.html  terminals.html
web/: agents.py  (+14 more)
(+23 files in other folders)
